added some schema mockup for user create and pass reset
