# restapi/operations/users/post_create_responses.go
@@ -1,0 +1,133 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PostCreateOKCode is the HTTP code returned for type PostCreateOK
+const PostCreateOKCode int = 200
+
+/*PostCreateOK An user id of the created user.
+
+swagger:response postCreateOK
+*/
+type PostCreateOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload PostCreateOKBody `json:"body,omitempty"`
+}
+
+// NewPostCreateOK creates PostCreateOK with default headers values
+func NewPostCreateOK() *PostCreateOK {
+	return &PostCreateOK{}
+}
+
+// WithPayload adds the payload to the post create o k response
+func (o *PostCreateOK) WithPayload(payload PostCreateOKBody) *PostCreateOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post create o k response
+func (o *PostCreateOK) SetPayload(payload PostCreateOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostCreateOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// PostCreateUnauthorizedCode is the HTTP code returned for type PostCreateUnauthorized
+const PostCreateUnauthorizedCode int = 401
+
+/*PostCreateUnauthorized SWT key is missing or invalid
+
+swagger:response postCreateUnauthorized
+*/
+type PostCreateUnauthorized struct {
+	/*
+	  Required: true
+	*/
+	WWWAuthenticate string `json:"WWW_Authenticate"`
+}
+
+// NewPostCreateUnauthorized creates PostCreateUnauthorized with default headers values
+func NewPostCreateUnauthorized() *PostCreateUnauthorized {
+	return &PostCreateUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the post create unauthorized response
+func (o *PostCreateUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *PostCreateUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the post create unauthorized response
+func (o *PostCreateUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *PostCreateUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW_Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW_Authenticate", wWWAuthenticate)
+	}
+
+	rw.WriteHeader(401)
+}
+
+/*PostCreateDefault Unexpected error
+
+swagger:response postCreateDefault
+*/
+type PostCreateDefault struct {
+	_statusCode int
+}
+
+// NewPostCreateDefault creates PostCreateDefault with default headers values
+func NewPostCreateDefault(code int) *PostCreateDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostCreateDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post create default response
+func (o *PostCreateDefault) WithStatusCode(code int) *PostCreateDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post create default response
+func (o *PostCreateDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *PostCreateDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+}
