# restapi/operations/users/post_password_responses.go
@@ -1,0 +1,133 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package users
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+)
+
+// PostPasswordOKCode is the HTTP code returned for type PostPasswordOK
+const PostPasswordOKCode int = 200
+
+/*PostPasswordOK shows a message if the password was set or sent with an email reminder.
+
+swagger:response postPasswordOK
+*/
+type PostPasswordOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload PostPasswordOKBody `json:"body,omitempty"`
+}
+
+// NewPostPasswordOK creates PostPasswordOK with default headers values
+func NewPostPasswordOK() *PostPasswordOK {
+	return &PostPasswordOK{}
+}
+
+// WithPayload adds the payload to the post password o k response
+func (o *PostPasswordOK) WithPayload(payload PostPasswordOKBody) *PostPasswordOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the post password o k response
+func (o *PostPasswordOK) SetPayload(payload PostPasswordOKBody) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *PostPasswordOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+
+}
+
+// PostPasswordUnauthorizedCode is the HTTP code returned for type PostPasswordUnauthorized
+const PostPasswordUnauthorizedCode int = 401
+
+/*PostPasswordUnauthorized SWT key is missing or invalid
+
+swagger:response postPasswordUnauthorized
+*/
+type PostPasswordUnauthorized struct {
+	/*
+	  Required: true
+	*/
+	WWWAuthenticate string `json:"WWW_Authenticate"`
+}
+
+// NewPostPasswordUnauthorized creates PostPasswordUnauthorized with default headers values
+func NewPostPasswordUnauthorized() *PostPasswordUnauthorized {
+	return &PostPasswordUnauthorized{}
+}
+
+// WithWWWAuthenticate adds the wWWAuthenticate to the post password unauthorized response
+func (o *PostPasswordUnauthorized) WithWWWAuthenticate(wWWAuthenticate string) *PostPasswordUnauthorized {
+	o.WWWAuthenticate = wWWAuthenticate
+	return o
+}
+
+// SetWWWAuthenticate sets the wWWAuthenticate to the post password unauthorized response
+func (o *PostPasswordUnauthorized) SetWWWAuthenticate(wWWAuthenticate string) {
+	o.WWWAuthenticate = wWWAuthenticate
+}
+
+// WriteResponse to the client
+func (o *PostPasswordUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	// response header WWW_Authenticate
+
+	wWWAuthenticate := o.WWWAuthenticate
+	if wWWAuthenticate != "" {
+		rw.Header().Set("WWW_Authenticate", wWWAuthenticate)
+	}
+
+	rw.WriteHeader(401)
+}
+
+/*PostPasswordDefault Unexpected error
+
+swagger:response postPasswordDefault
+*/
+type PostPasswordDefault struct {
+	_statusCode int
+}
+
+// NewPostPasswordDefault creates PostPasswordDefault with default headers values
+func NewPostPasswordDefault(code int) *PostPasswordDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &PostPasswordDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the post password default response
+func (o *PostPasswordDefault) WithStatusCode(code int) *PostPasswordDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the post password default response
+func (o *PostPasswordDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WriteResponse to the client
+func (o *PostPasswordDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+}
